Div class change
and a typo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 	</div>
 
-	<div class="supportive-text">
+	<div class="professional-experience">
 		<div class="container">
 			<h3>Metro Transit</h3>
 			<h4>Bus Operator</h4>
@@ -48,7 +48,6 @@
 				<li>Shifted priorities on ad-hoc basis and in coordination with the goals of the support team, communicating these changes via group chat.</li>
 				<li>Monitored website and in-house tools for bugs and adverse changes following a code push by the developers, reproducing and reporting the issue appropriately.</li>
 			</ul>
-
 			<h3>City College News (Minneapolis Community &amp; Technical College)</h3>
 			<h4>Managing Editor</h4>
 			<p class="pull-right">October 2012 &mdash; May 2013</p>
