--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <!--    HHHH    HHHH    IIII        PPPP            RRRR     RRRR   IIII    MMM          MMM    EEEEEEEEEEEE    -->
 
 <body>
-
-		<!-- Header -->
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Anthony C. Maki</h1>
-			<p>(612) 226-9494<br>3441 Emerson Ave S Apt 102<br>Minneapolis, MN 55408-3921</p>
-			<p>Confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow.</p>
+			<div class="infobox">
+				<p class="contact-info">(612) 226-9494<br>3441 Emerson Ave S Apt 102<br>Minneapolis, MN 55408-3921</p>
+				<p class="profile">Confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow.</p>
+			</div>
 		</div>
 	</div>
 
