Professional experience tweaking
Professional experience tweaking

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="professional-experience">
 		<div class="container">
 			<h3>Metro Transit</h3>
-			<p class="pull-right">January 2015 &mdash; October 2015</p>
+			<p class="pull-right date">January 2015 &mdash; October 2015</p>
 			<h4>Bus Operator</h4>
 			<ul>
 				<li>Operated passenger bus on fixed-route service safely and efficiently throughout Minneapolis and its southwestern, western, northwestern and northern suburbs, accessing an intimate geographic knowledge of highways, arterial streets and landmarks.</li>
@@ -39,7 +39,7 @@
 				<li>Assured safety and comfortability by conducting pre- and post-trip inspections, spot-checking and correcting cleanliness issues and communicating with every customers as they board.</li>
 			</ul>
 			<h3>Swappa</h3>
-			<p class="pull-right">September 2014 &mdash; January 2015</p>
+			<p class="pull-right date">September 2014 &mdash; January 2015</p>
 			<h4>Moderator</h4>
 			<ul>
 				<li>Checked new submissions for quality and veracity, looking for patterns that may indicate unscrupulous, misinformed or fraudulent behavior.</li>
@@ -49,7 +49,7 @@
 				<li>Monitored website and in-house tools for bugs and adverse changes following a code push by the developers, reproducing and reporting the issue appropriately.</li>
 			</ul>
 			<h3>City College News (Minneapolis Community &amp; Technical College)</h3>
-			<p class="pull-right">October 2012 &mdash; May 2013</p>
+			<p class="pull-right date">October 2012 &mdash; May 2013</p>
 			<h4>Managing Editor</h4>
 			<ul>
 				<li>Assigned beats (news, features, arts, crime, etc.) and specific pieces to student reporters with hard deadlines for bi-weekly printed issue and rolling online deadlines, checking in with writers on their assignments’ progress and how to assist them in making their goals.</li>
@@ -57,7 +57,7 @@
 				<li>Distributed stipend payments to editors, writers and contributors for their work each issue, managed an $11,000 college-provided budget, including fixed publication and technical costs, staff stipends, equipment and event purchases and conference travel costs, and preparing and submitting purchase requisition forms to college administration in conjunction with faculty adviser Ben Lathrop.</li>
 				<li>Frequently performed duties as Acting Editor in Chief during times in which the Editor in Chief was not available, contributed to regular assignments for the newspaper, and directed layout editing of the newspaper in Adobe InDesign.</li>
 			</ul>
-			<p class="pull-right">May 2010 &mdash; January 2011</p>
+			<p class="pull-right date">May 2010 &mdash; January 2011</p>
 			<h4>Editor in Chief</h4>
 			<ul>
 				<li>Instituted, for the first time, stipends for student writers on a per-assignment basis and drove a push for a larger, more inclusive student staff reflective of MCTC’s demographics.</li>
@@ -66,7 +66,7 @@
 				<li>Wrote and reported for regular assignments for the newspaper, covering the campus, administration and Student Senate politics, including the discovery and investigation of a breach of private student data, causing thousands of notices to be sent to affect students.</li>
 			</ul>
 			<h3>The Daily Caller (Georgetown University)</h3>
-			<p class="pull-right">January 2011 &mdash; April 2011</p>
+			<p class="pull-right date">January 2011 &mdash; April 2011</p>
 			<h4>Editorial Intern</h4>
 			<ul>
 				<li>Wrote aggregated stories for various content verticals (science, entertainment, politics, etc.) for the then-relatively new conservative media website.</li>
