--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<h1>Anthony C. Maki</h1>
 			<div class="infobox">
-				<p class="contact-info">(612) 226-9494<br>3441 Emerson Ave S Apt 102<br>Minneapolis, MN 55408-3921</p>
+				<p class="contact-info"><a href="mailto:4cm4k1@gmail.com">4cm4k1@gmail.com</a> &#8226; <a href="tel:+16122269494">(612) 226-9494</a><br>3441 Emerson Ave S Apt 102<br>Minneapolis, MN 55408-3921</p>
 				<p class="profile">Confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow.</p>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 			<h4>Bus Operator</h4>
 			<ul>
 				<li>Operated passenger bus on fixed-route service safely and efficiently throughout Minneapolis and its southwestern, western, northwestern and northern suburbs, accessing an intimate geographic knowledge of highways, arterial streets and landmarks.</li>
-				<li>Represented our organization—being first point of customer contact—with excellent communication, knowledge, and discretion: answering questions, providing directions, acting as a wayfinder for disabled customers by calling out streets and landmarks, remembering frequent customers’ stops and requests, and showing compassionate customer service for disadvantaged people who may not always have the required fare.</li>
+				<li>Represented our organization&mdash;being first point of customer contact&mdash;with excellent communication, knowledge, and discretion: answering questions, providing directions, acting as a wayfinder for disabled customers by calling out streets and landmarks, remembering frequent customers&rsquo; stops and requests, and showing compassionate customer service for disadvantaged people who may not always have the required fare.</li>
 				<li>Assured safety and comfortability by conducting pre- and post-trip inspections, spot-checking and correcting cleanliness issues and communicating with every customers as they board.</li>
 			</ul>
 			<h3>Swappa</h3>
@@ -43,16 +43,16 @@
 			<h4>Moderator</h4>
 			<ul>
 				<li>Checked new submissions for quality and veracity, looking for patterns that may indicate unscrupulous, misinformed or fraudulent behavior.</li>
-				<li>Cross-referenced manufacturer device information, carrier and global IMEI databases, IP address logs and other identifying information to investigate suspected or known fraudulent users, blocking them and mitigating their listings’ impact as necessary.</li>
+				<li>Cross-referenced manufacturer device information, carrier and global IMEI databases, IP address logs and other identifying information to investigate suspected or known fraudulent users, blocking them and mitigating their listings&rsquo; impact as necessary.</li>
 				<li>Reached out to potential buyers as the first responder, either anticipating an opportunity for service or reacting to a listing comment, following up by addressing issues with sellers or correcting them immediately.</li>
 				<li>Shifted priorities on ad-hoc basis and in coordination with the goals of the support team, communicating these changes via group chat.</li>
 				<li>Monitored website and in-house tools for bugs and adverse changes following a code push by the developers, reproducing and reporting the issue appropriately.</li>
 			</ul>
-			<h3>City College News (Minneapolis Community &amp; Technical College)</h3>
+			<h3>City College News (MCTC)</h3>
 			<p class="pull-right date">October 2012 &mdash; May 2013</p>
 			<h4>Managing Editor</h4>
 			<ul>
-				<li>Assigned beats (news, features, arts, crime, etc.) and specific pieces to student reporters with hard deadlines for bi-weekly printed issue and rolling online deadlines, checking in with writers on their assignments’ progress and how to assist them in making their goals.</li>
+				<li>Assigned beats (news, features, arts, crime, etc.) and specific pieces to student reporters with hard deadlines for bi-weekly printed issue and rolling online deadlines, checking in with writers on their assignments&rsquo; progress and how to assist them in making their goals.</li>
 				<li>Conducted regular staff-wide meetings and editorial board meetings, effecting policy changes, approving inclusion into issues, laying out the printed newspaper and staying up well into the night to guide the current issue to an on-time, successful publication, from initial layout to sending the file to the printing press.</li>
 				<li>Distributed stipend payments to editors, writers and contributors for their work each issue, managed an $11,000 college-provided budget, including fixed publication and technical costs, staff stipends, equipment and event purchases and conference travel costs, and preparing and submitting purchase requisition forms to college administration in conjunction with faculty adviser Ben Lathrop.</li>
 				<li>Frequently performed duties as Acting Editor in Chief during times in which the Editor in Chief was not available, contributed to regular assignments for the newspaper, and directed layout editing of the newspaper in Adobe InDesign.</li>
@@ -60,8 +60,8 @@
 			<p class="pull-right date">May 2010 &mdash; January 2011</p>
 			<h4>Editor in Chief</h4>
 			<ul>
-				<li>Instituted, for the first time, stipends for student writers on a per-assignment basis and drove a push for a larger, more inclusive student staff reflective of MCTC’s demographics.</li>
-				<li>Terminated contract with Viacom’s College Media Network and transitioned to a self-hosted WordPress-based website, customizing a theme template to our organization’s needs, even directly inserting, using WordPress’ documentation, self-written PHP into theme files to provide desired author/byline information and styling.</li>
+				<li>Instituted, for the first time, stipends for student writers on a per-assignment basis and drove a push for a larger, more inclusive student staff reflective of MCTC&rsquo;s demographics.</li>
+				<li>Terminated contract with Viacom&rsquo;s College Media Network and transitioned to a self-hosted WordPress-based website, customizing a theme template to our organization&rsquo;s needs, even directly inserting, using WordPress&rsquo; documentation, self-written PHP into theme files to provide desired author/byline information and styling.</li>
 				<li>Aggressively sought online and print advertising partners, including long-duration ad deals, which throughout the semester replenished the funds used on publication and staff stipends.</li>
 				<li>Wrote and reported for regular assignments for the newspaper, covering the campus, administration and Student Senate politics, including the discovery and investigation of a breach of private student data, causing thousands of notices to be sent to affect students.</li>
 			</ul>
@@ -71,7 +71,7 @@
 			<ul>
 				<li>Wrote aggregated stories for various content verticals (science, entertainment, politics, etc.) for the then-relatively new conservative media website.</li>
 				<li>Followed White House and Congressional correspondents on assignment, acting as a runner during busy news periods, posing questions to politicians, such as Senators John McCain and Lindsey Graham, amongst a scrum of reporters, and recording and transcribing interviews for pieces in development.</li>
-				<li>Pitched ideas during morning editorial meetings and managed and copy-edited my own and my intern peers’ submissions in WordPress prior to online publication.</li>
+				<li>Pitched ideas during morning editorial meetings and managed and copy-edited my own and my intern peers&rsquo; submissions in WordPress prior to online publication.</li>
 			</ul>
 		</div>
 	</div>
