License and final CSS tweaks

--- a/index.html
+++ b/index.html
@@ -75,5 +75,10 @@
 			</ul>
 		</div>
 	</div>
+	<div class="footer">
+		<div class="container">
+			<p>&copy;2015, Anthony C. Maki. <a href="http://creativecommons.org/licenses/by/4.0/">Licensed here!</a></p>
+		</div>
+	</div>
 </body>
 </html>
