Typos and Page Title

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
+	<title>Anthony C. Maki's Resume</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://use.typekit.net/yjf8ghc.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
-	<link href="stylesheet.css" rel="stylesheet"> 
+	<link rel="stylesheet" href="stylesheet.css"> 
 </head>
 
 <!--    HHHH    HHHH    IIII        PPPPPPPPP       RRRRRRRRR       IIII    MMMM        MMMM    EEEEEEEEEEEE    -->
@@ -36,7 +37,7 @@
 			<ul>
 				<li>Operated passenger bus on fixed-route service safely and efficiently throughout Minneapolis and its southwestern, western, northwestern and northern suburbs, accessing an intimate geographic knowledge of highways, arterial streets and landmarks.</li>
 				<li>Represented our organization&mdash;being first point of customer contact&mdash;with excellent communication, knowledge, and discretion: answering questions, providing directions, acting as a wayfinder for disabled customers by calling out streets and landmarks, remembering frequent customers&rsquo; stops and requests, and showing compassionate customer service for disadvantaged people who may not always have the required fare.</li>
-				<li>Assured safety and comfortability by conducting pre- and post-trip inspections, spot-checking and correcting cleanliness issues and communicating with every customers as they board.</li>
+				<li>Assured safety and comfortability by conducting pre- and post-trip inspections, spot-checking and correcting cleanliness issues and communicating with every customer as they board.</li>
 			</ul>
 			<h3>Swappa</h3>
 			<p class="pull-right date">September 2014 &mdash; January 2015</p>
@@ -77,7 +78,7 @@
 	</div>
 	<div class="footer">
 		<div class="container">
-			<p>&copy;2015, Anthony C. Maki. <a href="http://creativecommons.org/licenses/by/4.0/">Licensed here!</a></p>
+			<p>&copy;2015, Anthony C. Maki. <a href="http://creativecommons.org/licenses/by/4.0/">Available under the license here!</a></p>
 		</div>
 	</div>
 </body>
