--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Anthony Maki's Resume</title>
 	<script src="https://use.typekit.net/yjf8ghc.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	<link rel="stylesheet" href="stylesheet.css"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
