--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Anthony Maki's Resume</title>
-	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
 	<link rel="stylesheet" href="stylesheet.css"> 
 	<script src="https://use.typekit.net/yjf8ghc.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
