Added <meta> tags for sharing/search

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" itemscope itemtype="http://schema.org/Person">
 
 <head>
 	<title>Anthony Maki's Resume</title>
@@ -8,6 +8,26 @@
 	<script src="https://use.typekit.net/yjf8ghc.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow." />
+
+	<!-- FACEBOOK -->
+    <meta property="og:url" content="http://4cm4k1.github.io/" />
+    <meta property="og:title" content="Anthony Maki's Resume" />
+    <meta property="og:description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow." />
+    <meta property="og:image" content="photo.jpg" />
+
+    <!-- TWITTER -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@4cm4k1" />
+    <meta name="twitter:creator" content="@4cm4k1">
+    <meta name="twitter:title" content="Anthony Maki's Resume" />
+    <meta name="twitter:description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow." />
+    <meta name="twitter:image:src" content="photo.jpg">
+
+    <!-- SCHEMA.ORG -->
+    <meta itemprop="name" content="Anthony Maki's Resume">
+	<meta itemprop="description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow.">
+	<meta itemprop="image" content="photo.jpg">
 </head>
 
 <body>
