--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:creator" content="@4cm4k1">
     <meta name="twitter:title" content="Anthony Maki's Resume" />
     <meta name="twitter:description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow." />
-    <meta name="twitter:image:src" content="photo.jpg">
+    <meta name="twitter:image:src" content="http://4cm4k1.github.io/photo.jpg">
 
     <!-- SCHEMA.ORG -->
     <meta itemprop="name" content="Anthony Maki's Resume">
