Another bug fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="http://4cm4k1.github.io/" />
     <meta property="og:title" content="Anthony Maki's Resume" />
     <meta property="og:description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow." />
-    <meta property="og:image" content="photo.jpg" />
+    <meta property="og:image" content="http://4cm4k1.github.io/photo.jpg" />
 
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image">
@@ -27,7 +27,7 @@
     <!-- SCHEMA.ORG -->
     <meta itemprop="name" content="Anthony Maki's Resume">
 	<meta itemprop="description" content="Anthony is a confident, curious self-starter passionate about technology and solving problems who embraces challenges as opportunities to connect and grow.">
-	<meta itemprop="image" content="photo.jpg">
+	<meta itemprop="image" content="http://4cm4k1.github.io/photo.jpg">
 </head>
 
 <body>
