Updated page title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Answer Guide</title>
-    <meta name="description" content="Webpage">
-    
+    <title>STI Challenge - With Bugs</title>
+    <meta name="description" content="Webpage">    
   </head>
   
   <body> 
