Remove mobile responsive Bootstrap selectors (e.g. col-xs-12)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   		<h1>Calculating the Short Term Incentives<br/>of the Characters of <em>To Kill A Mockingbird</em></h1>
   	</header>
   	<main class="container">
-  		<section class="col-md-6 col-md-offset-3 col-xs-12 col-xs-offset-3">
+  		<section class="col-md-6 col-md-offset-3">
     		<ul id="content" class="list-group"></ul>
     	</section>
     </main>
