--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="utf-8">
     <title>STI Calculator</title>
     <meta name="description" content="Webpage">    
-    <link rel="stylesheet" href="">    
+    <link rel="stylesheet" href="">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>    
   </head>
   
   <body> 
-
+  	<div id="employees"><ul class="list-group"></ul></div>
     <script src="app.js"></script>
   </body>
 
