--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<title>Weekend Assignment</title>
-		<script src="app.js"></script>
+		<meta charset="utf-8">
+		<title>Weekend Challenge 1</title>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" media="screen" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" title="Weekend Challenge 1" charset="utf-8"/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
+		<script src="app.js" charset="utf-8"></script>
 	</head>
-	<body>
-
-
-
+	<body class="container">
+		<header class="page-header">
+			<h1>Weekend Challenge 1 <small>Patient Insurance Claims</small></h1>
+		</header>
+		<main></main>
 	</body>
-
 </html>
