--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <title>Group jQuery Challenge 1</title>
   </head>
   <body>
+    <form id="">
+      <label for="make">Make</label>
+      <input type="text" name="make" id="make" placeholder="Enter vehicle make" />
+
+      <label for="model">Model</label>
+      <input type="text" name="model" id="model" placeholder="Enter vehicle model" />
+
+      <label for="year">Year</label>
+      <input type="text" name="year" id="year" placeholder="Enter vehicle year" />
+
+      <label for="color">Color</label>
+      <input type="text" name="color" id="color" placeholder="Enter vehicle color" />
+
+      <label for="customerRating">Customer Rating</label>
+      <input type="text" name="customerRating" id="customerRating" placeholder="Enter customer rating"/>
+
+      <label for="price">Class</label>
+      <input type="text" name="price" id="price" placeholder="Enter vehicle price"/>
+
+    </form>
+
+    <input type= "submit" />
+
+
+
+
+
+
+
+    </form>
 
   </body>
 </html>
