Add vendor sources, comment outline of planned HTML and JS code

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Group jQuery Challenge 1</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
   </head>
-  <body>
-
+  <body class="container">
+    <header class="page-header">
+      <h1>Group jQuery Challenge 1 <small>Used Car Tracker</small></h1>
+    </header>
+    <main>
+      <section class="row">
+        <!-- Form -->
+      </section>
+      <section class="row">
+        <!-- List of Cars -->
+        <!-- refreshDOM function will append here -->
+      </section>
+    </main>
   </body>
 </html>
