added form ID and changed ID's to match liz

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Group jQuery Challenge 1</title>
   </head>
   <body>
-    <form id="">
+    <form id="carForm">
       <label for="make">Make</label>
       <input type="text" name="make" id="make" placeholder="Enter vehicle make" />
 
@@ -15,8 +15,8 @@
       <label for="year">Year</label>
       <input type="text" name="year" id="year" placeholder="Enter vehicle year" />
 
-      <label for="color">Color</label>
-      <input type="text" name="color" id="color" placeholder="Enter vehicle color" />
+      <label for="carColor">Color</label>
+      <input type="text" name="color" id="carColor" placeholder="Enter vehicle color" />
 
       <label for="customerRating">Customer Rating</label>
       <input type="text" name="customerRating" id="customerRating" placeholder="Enter customer rating"/>
