add functions to trent.js

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Randomizer</title>
+    <script src="trent.js"></script>
   </head>
   <body>
 
