Rename subheading to give app clearer purpose

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="container">
     <header class="page-header">
-        <h1>Prime Group Challenge 4 <small>Group Randomizer</small></h1>
+        <h1>Prime Group Challenge 4 <small>Randomized Team Generator</small></h1>
     </header>
     <main class="row">
         <section class="col-md-6">
