tried some animations that didn't work

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h2>How many teams do you want?</h2>
                 </div>
                 <div class="col-md-6">
-                    <h2> How big of teams do you want?</h2>
+                    <h2> How many people in each team?</h2>
                 </div>
             </div>
             <div class="row">
