--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Peer jQuery Challenge</h1>
     </header>
     <main>
-      <section id="buttonSpace"></section>
+      <section class="btn-toolbar" id="buttonSpace"></section>
       <section id="answerSpace"></section>
     </main>
 
