Complete basic mode, less optional tag input

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       <h1>Prime Weekend Challenge 2 <small>Random GIF Generator using Giphy API</small></h1>
     </header>
     <main>
-      <button type="button" name="button" class="btn btn-lg btn-primary">Random GIF!</button>
-      <section id="allTheGIFs">
-
+      <section id="buttons">
+        <button type="button" name="button" id="randomGIF" class="btn btn-lg btn-primary">Random GIF!</button>
       </section>
+
+      <section id="allTheGIFs"></section>
     </main>
   </body>
 </html>
