--- a/index.html
+++ b/index.html
@@ -16,69 +16,81 @@
     </header>
     <main class="row">
         <!-- Calculator container -->
-        <div class="col-md-4 col-md-offset-4 calculator">
+        <div class="col-md-6 col-md-offset-3 calculator">
             <form class="">
                 <!-- Output field -->
-                <input type="text" class="form-control input-lg text-right" name="name" placeholder="0" ng-model="output" />
+                <input type="text" class="form-control input-lg text-right" name="name" placeholder="0" ng-model="displayOutput" />
                 <!-- Operand and operator keys -->
                 <!-- First row -->
                 <div class="row">
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">1</button>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.one}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.two}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.three}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">2</button>
+                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">{{operator.add}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">3</button>
-                    </div>
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">+</button>
+                        <button type="button" name="button" class="btn btn-lg btn-danger btn-block calc-buttons">{{misc.clear}}</button>
                     </div>
                 </div>
                 <!-- Second row -->
                 <div class="row">
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">4</button>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.four}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.five}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.six}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">5</button>
+                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">{{operator.subtract}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">6</button>
-                    </div>
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">-</button>
+                        <button type="button" name="button" class="btn btn-lg btn-info btn-block calc-buttons">{{operator.pow}}</button>
                     </div>
                 </div>
                 <!-- Third row -->
                 <div class="row">
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">7</button>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.seven}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.eight}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.nine}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">8</button>
+                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">{{operator.multiply}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">9</button>
-                    </div>
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">*</button>
+                        <button type="button" name="button" class="btn btn-lg btn-info btn-block calc-buttons">{{operator.sqrt}}</button>
                     </div>
                 </div>
                 <!-- Fourth row -->
                 <div class="row">
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">0</button>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.zero}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">{{operand.point}}</button>
+                    </div>
+                    <div class="col-md-2 col-xs-2">
+                        <button type="button" name="button" class="btn btn-lg btn-success btn-block calc-buttons" ng-click="evaluate()">{{operator.equal}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-default btn-block calc-buttons">.</button>
+                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">{{operator.divide}}</button>
                     </div>
                     <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-success btn-block calc-buttons">=</button>
-                    </div>
-                    <div class="col-md-3 col-xs-3">
-                        <button type="button" name="button" class="btn btn-lg btn-primary btn-block calc-buttons">/</button>
+                        <button type="button" name="button" class="btn btn-lg btn-info btn-block calc-buttons">{{operator.parens}}</button>
                     </div>
                 </div>
             </form>
