--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,22 @@
     <header class="page-header">
       <h1>Prime Assessment 2 <small>Angular and Express</small></h1>
     </header>
-    <main>
-      <p>
-        Some text.
-      </p>
+    <main class="row">
+      <section class="col-md-6 col-xs-6">
+        <h2>
+          Xi Class List
+          <button class="btn btn-primary btn-lg" type="button" name="button" ng-click="getStudents()">Display Students</button>
+        </h2>
+      </section>
+      <!-- Where the students will be listed after the button is clicked
+      and the $http request returns -->
+      <section class="col-md-6 col-xs-6">
+        <div class="list-group">
+          <a class="list-group-item" ng-repeat="student in students">
+            {{student.name}}
+          </a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
