--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
     <script src="client.js"></script>
   </head>
 
-  <body>
+  <body ng-controller="TwitterController">
     <button ng-click="getHandles()">Generate Twitter Handles</button>
     <div>
-      {{3+2}}
       <ul>
         <li ng-repeat="handle in handles">
           <a ng-href="https://twitter.com/{{handle}}">{{handle}}</a>
