Add title to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link href="style.css" rel="stylesheet" />
     <script src="vendors/angular/angular.min.js"></script>
     <script src="client.js"></script>
+    <title>Verbose Shrub: a Twitter handle generator</title>
   </head>
 
   <body ng-controller="TwitterController">
