--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,10 @@
   </head>
 
   <body ng-controller="TwitterController as twitter" class="container">
-    <header class="page-header"><h1>Twitter Username Generator</h1></header>
+    <header class="page-header"><h1>Verbose Shrub <small>A Twitter handle generator</small></h1></header>
     <button ng-click="twitter.getHandles()" class="btn btn-success btn-lg">Generate Twitter Handles</button>
-    <div>
-      <ul>
-        <li ng-repeat="handle in twitter.handles track by $index">
-          <a ng-href="https://twitter.com/{{handle}}">{{handle}}</a>
-        </li>
-      </ul>
+    <div class="list-group handles">
+          <a ng-href="https://twitter.com/{{handle}}" ng-repeat="handle in twitter.handles track by $index" class="list-group-item">{{handle}}</a>
     </div>
 
   </body>
