not completed html and client files

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <h1>Expecto <em>PATRONUS</em></h1>
     <div class="person">
     <label>Input Person <small>(first_name last_name)</small></label>
-    <input type="text" id="person_name"></input>
-    <button ng-click="person_submit">Submit Person</button>
-    <ul ng-repeat>
+    <input type="text" id="person_name" ng-model="personText"></input>
+    <button ng-click="personSubmit">Submit Person</button>
+    <ul ng-repeat="people in peopleList">
   </div>
   <div class="patronus">
     <label>Input Patronus <small>(patronus_name)</small></label>
-    <input type="text" id="patronus_name"></input>
-    <button ng-click="patronus_submit">Submit Patronus</button>
+    <input type="text" id="patronus_name" ng-model="patronusText"></input>
+    <button ng-click="patronusSubmit">Submit Patronus</button>
   </body>
 </html>
