--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Expecto Patronus</title>
+    <link rel="stylesheet" href="./vendors/bootstrap.min.css" charset="utf-8"/>
+    <link rel="stylesheet" href="style.css" charset="utf-8"/>
+    <script src="./vendors/angular.min.js" charset="utf-8"></script>
+    <script src="client.js" charset="utf-8"></script>
   </head>
   <body ng-controller="patronuscontroller as patronus">
     <h1>Expecto <em>PATRONUS</em></h1>
