Fixed the post errors

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h1>Expecto <em>PATRONUS</em></h1>
     <div class="person">
     <label>Input Person <small>(first_name last_name)</small></label>
-    <input type="text" id="person_name" ng-model="personText"></input>
+    <input type="text" id="person_name" ng-model="personText">
     <button ng-click="personSubmit()">Submit Person</button>
     <ul ng-repeat="people in peopleList">
       <li>{{people}}</li>
@@ -20,7 +20,7 @@
   </div>
   <div class="patronus">
     <label>Input Patronus <small>(patronus_name)</small></label>
-    <input type="text" id="patronus_name" ng-model="patronusText"></input>
+    <input type="text" id="patronus_name" ng-model="patronusText">
     <button ng-click="patronusSubmit()">Submit Patronus</button>
     <ul ng-repeat="patronus in patronusList">
       <li>{{patronus}}</li>
