Make POST work as intended and live-update ng-repeat on DOM

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <input type="text" id="patronus_name" ng-model="patronusText">
     <button ng-click="patronusSubmit()">Submit Patronus</button>
     <ul ng-repeat="patronus in patronusList">
-      <li>{{patronus}}</li>
+      <li>{{patronus.patronus_name}}</li>
     </ul>
   </body>
 </html>
